# patrol_butiabots

patrobot_description/: CMakeLists.txt  package.xml
patrobot_description/meshes/: patrolbot.stl
patrobot_description/urdf/: patrolbot.gazebo  patrolbot.xacro  patrolbot_wheel.xacro  sick_lms1xx.urdf.xacro
patrolbot_control/: CMakeLists.txt  package.xml
patrolbot_control/launch/: control.launch
patrolbot_control/src/: mover.cpp
patrolbot_gazebo/: CMakeLists.txt  package.xml
patrolbot_gazebo/launch/: patrolbot.launch
