<?xml version="1.0"?>
<package>
  <name>patrolbot_description</name>
  <version>0.1.0</version>
  <description>
    A patrobot description for Gazebo. First working version
  </description>
  
  <maintainer email="ricardogrando13@gmail.com">Ricardo Grando</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>urdf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>urdf</run_depend>
</package>